--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <link href="https://fonts.googleapis.com/css?family=Archivo+Black|Inconsolata|Oxygen" rel="stylesheet">
-    <script src="https://use.fontawesome.com/6f9a51a576.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">     <!-- metadata when web app is added to the homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/ -->    
     <link rel="shortcut icon" href="%PUBLIC_URL%/codetogo.ico">
     <title>CodeToGo</title>
